--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -1,5 +1,4 @@
-
-.mainpage-container{
+.mainpage-main-container{
     text-align: center;
     width: 100%;
     height: 100%;
@@ -14,7 +13,7 @@
 
 .mainpage-title {
     font-family: Montserrat, sans-serif;
-    font-size: 1.5em;
+    font-size: 1.7em;
     font-weight: 600;
     text-align: center;
   
@@ -22,7 +21,7 @@
 
 .mainpage-description{
     font-family: Montserrat, sans-serif;
-    font-size: 1 em;
+    font-size: 1.3em;
     font-weight: 400;
     text-align: center;
 }
